# temp-monitor

./: .env.example  .gitignore  README.md  bom.csv  fixes for v2  package-lock.json
.github/workflows/: server-build.yml  ui-build.yml
gschem-sym/: 5v-dc-dc.sym  TIP-120.sym~  motor.sym  ssrelay-CPC1708.sym
motor-controller-ui/public/: manifest.json
pcb/: .gitignore  Custom.kicad_sym  I2C BBGW Node.logicdata  MPRLS Arduino.logicdata  fixes for v2  fp-lib-table  temp-sensor.kicad_pcb  temp-sensor.kicad_prl  temp-sensor.kicad_pro  temp-sensor.kicad_sch
pcb-elements/: DIODE_LAY 400.fp  PCB.00019527.backup  PCB.00021380.backup
pcb/gschem-sym/: 8HEAD.sym  ADAFRUIT-3965.sym  BeagleBoardBlack-1.sym  BeagleBoardGreen-1.sym  L298N.sym  PJ-102AH.sym  TIP-120.sym  connector10-1.sym
pcb/pcb-elements/: 8HEAD_M.fp  BBGW.fp  BT8.fp  H2x5-1.fp  HEADER10_1.fp  JTAGIC3-50MIL-SMD.fp  JTAGICE3-50MIL.fp  L298N.fp
pcb/project/: #Schematic 2.sch#  Schematic 1.ps  Schematic 1.sch  Schematic 2.ps  Schematic 2.sch  Schematic 3.ps  Schematic 3.sch  Schematic.ps  Schematic.sch  board.cmd  board.net  board.new.pcb  board.pcb  board.pcb.bak  board.pcb.bak0  gafrc  orig.ps  orig.sch  project
probe/: .gitignore  index.js  package-lock.json  package.json
probe/src/: index.ts
project/: Schematic.net  Schematic.pcb  Schematic.sch  Schematic.sch~  board-fixed.pcb  board.cmd  board.net  board.new.pcb  board.new.pcb~  board.pcb  board.pcb.bak  board.pcb~
project/gerb/: board.bottom.gbr  board.bottommask.gbr  board.fab.gbr  board.outline.gbr  board.plated-drill.cnc  board.top.gbr  board.topmask.gbr  board.topsilk.gbr
project/gerbers/: bottom.gbr  bottommask.gbr  bottomsilk.gbr  fab.gbr  outline.gbr  plated-drill.cnc  top.gbr  topmask.gbr  toppaste.gbr  topsilk.gbr
rust-probe/: Cargo.toml  README.md  sdkconfig.defaults
rust-probe/.devcontainer/: devcontainer.json
rust-probe/docs/: README.md
rust-probe/scripts/: flash.sh  run-wokwi.sh
rust-probe/src/: http.rs  main.rs  tiny_mqtt.rs  wifi.rs
server/: package-lock.json  package.json  tsconfig.json
server/src/: db.ts  groom.js  hydrate.js  logSetup.ts  logger.js  motor.js  pipeline.js  pressure.js  queue.js  schema.js  schema.ts  server.js  server.ts  state.js  typeDefs.js  typeDefs.ts  websocket.js
server/src/cli/: cli.ts  (+2 more)
src/: server.js
src/cli/: cli.js
ui/: codegen.yml  gen-fragments.js  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  App.tsx  ChartPanel.js  ControlPanel.js  Header.js  ReplayRoute.js  RootRoute.js  index.css  index.js  index.tsx  queries.js
(+88 files in other folders)
