[package]
name = "rust-probe"
version = "0.1.0"
authors = ["Kevin Johnson <kevin@coolkev.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
dht-embedded = "0.1.1"
embedded-hal = "1.0.0-alpha.9"
anyhow = "1"

[patch.crates-io]
dht-embedded = { git = 'https://github.com/kj800x/dht-embedded-rs' }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
