[package]
name = "rust-probe"
version = "0.1.0"
authors = ["Kevin Johnson <kevin@kj800x.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
dht-embedded = "0.2.0"
embedded-hal = "1.0.0-alpha.9"
embedded-svc = "0.24.0"
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
anyhow = "1.0.68"
log = "0.4.17"
heapless = "0.7.16"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[patch.crates-io]
esp-idf-svc = { git = 'https://github.com/kj800x/esp-idf-svc.git', branch = 'kj-patches' }
